--- a/style.css
+++ b/style.css
@@ -193,6 +193,12 @@ h2 {
     color: #000;
 }
 
+.feathered-image {
+  border-radius: 50%; /* Optional: Makes the image round */
+  box-shadow: inset 0 0 50px 50px white; /* Adjust color, blur, and spread as needed */
+}
+
+
 
 #about {
     text-align: center;
